# quern

./: .gitignore  BUGFIX_SUMMARY_2026-02-13.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PERFORMANCE_FINDINGS.md  PERFORMANCE_INSTRUMENTATION.md  PHASE-4B-ALPHA-VALIDATION.md  README.md  example-ui-test.py  pyproject.toml  quern  run-parallel.py  test-device-pool.sh  test-multi-device.sh  verify_api_additions.sh
docs/: agent-guide.md  coordinate-learning-system-design.md  idb-swiftui-toggle-tap.md  mcp-api-audit.md  performance-investigation-guide.md  phase1-architecture.md  phase2-architecture.md  phase2b-proxy-cleanup-spec.md  phase3-architecture.md  phase4a-architecture.md  phase4b-alpha-device-pool-spec.md  phase4b-delta-testing-polish-spec.md  phase4b-gamma-resolution-protocol-spec.md  phase4b-multi-device-plan.md  physical-device-cert-setup.md  quern-api-additions-spec.md  quern-app-graph-and-dsl-design.md  quern-roadmap.md  spec-snapshots-and-tags.md  troubleshooting.md
mcp/: README.md  package-lock.json  package.json
server/: __main__.py  auth.py  config.py  main.py  models.py
tests/: test_addon_intercept.py  test_app_state.py  test_app_state_api.py  test_build_adapter.py  test_cert_api.py  test_cert_integration.py  test_cert_manager.py  test_children_of.py  test_classifier.py  test_controller_pool_fallback.py  test_crash_adapter.py  test_deduplicator.py  test_device_api.py  test_device_controller.py  test_device_pool.py  test_device_pool_api.py  test_devicectl_backend.py  test_flow_store.py  test_flow_summary.py  test_idb_backend.py  test_integration.py  (+28 more)
(+86 files in other folders)
