[project]
name = "ios-debug-server"
version = "0.1.0"
description = "iOS debug log capture and AI context server"
readme = "README.md"
license = "MIT with Commons Clause"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0",
    "sse-starlette>=2.0",
    "mitmproxy>=10.0",
    "httpx>=0.27",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
sqlite = [
    "aiosqlite>=0.20",
]

[project.scripts]
ios-debug-server = "server.main:cli"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["server*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
